footer logo gap correction

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,11 @@ body, html {
   flex-direction: column;
   align-items: start;
 }
+@media (min-width: 922px) {
+  .footer .container {
+    align-items: center;
+  }
+}
 .footer ul {
   margin: 0;
   padding: 0;
@@ -153,6 +158,7 @@ body, html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 10px;
   }
 }
 @media (min-width: 768px) {
@@ -160,6 +166,7 @@ body, html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 10px;
   }
 }
 .menu_a_la_carte footer .fooder-list {
