--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -29,6 +29,9 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    @include media(pc) {
+      align-items: center;
+    }
   }
   ul {
     margin: 0;
@@ -62,6 +65,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 10px;
       }
     }
     .fooder-list {
